--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,65 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'variables.scss';
+@import '~bulma/bulma.sass';
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import '~ngx-bar-rating/themes/br-stars-theme.css';
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+* {
+  font-family: 'Quicksand', sans-serif;
+}
+
+.title {
+  font-weight: 700;
+}
+
+.subtitle {
+  font-weight: 600;
+}
+
+.card {
+  height: 100%;
+  position: relative;
+  padding-bottom: 50px;
+  border-radius: 6px;
+  .image img {
+    border-radius: 6px 6px 0 0;
+  }
+  .card-footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    a {
+      &:first-of-type {
+        border-bottom-left-radius: 6px;
+      }
+      &:last-of-type {
+        border-bottom-right-radius: 6px;
+      }
+    }
+  }
+}
+
+.navbar {
+  transition: .4s;
+  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);
+  &.is-transparent {
+    background: transparent;
+    box-shadow: none;
+    .navbar-item, .title {
+      color: white;
+    }
+  }
+}
+
+.button {
+  transition: .4s;
+  border-radius: 6px;
+}
+
+.br-stars {
+  margin: 10px 0 20px !important;
+  .br-unit {
+    width: 18px;
+    height: 18px;
+  }
+}
