feat: footer info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,8 @@
 <router-outlet></router-outlet>
 <footer class="footer has-text-centered">
   <div class="container">
+    <p>OSC Conexão Solidária - CNPJ 24.236.775/0001-29</p>
+    <hr>
     <p>Desenvolvido por <a href="https://hildor.com.br" target="_blank">QVS</a></p>
   </div>
 </footer>
