--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,6 @@
   <div class="container">
     <p>OSC Conexão Solidária - CNPJ 24.236.775/0001-29</p>
     <hr>
-    <p>Desenvolvido por <a href="https://hildor.com.br" target="_blank">QVS</a></p>
+    <p>Desenvolvido por <a href="https://unze.com.br" target="_blank">Unze</a></p>
   </div>
 </footer>
