feat: place listing, pagination and filtering

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,3 +50,9 @@
     <p>Desenvolvido por <a href="https://unze.com.br" target="_blank">Unze</a></p>
   </div>
 </footer>
+<ngx-ui-loader
+  text="Carregando"
+  fgsColor="#156fe4"
+  pbColor="#156fe4"
+  fgsType="ball-scale-multiple">
+</ngx-ui-loader>
