--- a/src/app/pages/places/places.component.scss
+++ b/src/app/pages/places/places.component.scss
@@ -10,3 +10,9 @@
     background-size: cover !important;
   }
 }
+
+.filter-box {
+  position: relative;
+  top: -100px;
+  margin-bottom: -50px;
+}
