--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @import 'variables.scss';
 @import '~bulma/bulma.sass';
+@import '~ngx-toastr/toastr';
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import '~ngx-bar-rating/themes/br-stars-theme.css';
 @import '~@ng-select/ng-select/themes/default.theme.css';
