--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -12,13 +12,26 @@
               <div class="field">
                 <label for="email">E-mail</label>
                 <div class="control">
-                  <input type="email" class="input" name="email" id="email" required>
+                  <input
+                    type="email"
+                    class="input"
+                    name="email"
+                    id="email"
+                    required
+                    [(ngModel)]="login.email">
                 </div>
               </div>
               <div class="field">
                 <label for="password">Senha</label>
                 <div class="control">
-                  <input type="password" class="input" name="password" id="password" required>
+                  <input
+                    type="password"
+                    class="input"
+                    name="password"
+                    id="password"
+                    autocomplete="current-password"
+                    required
+                    [(ngModel)]="login.password">
                 </div>
               </div>
               <br>
